IGR-50 zipAndUploadCsv completed (upload logic stubbed)